<resources>
    <string name="app_name">Gasto de Viagem</string>
    <string name="distancia">Distância</string>
    <string name="preco">Preço</string>
    <string name="autonomia">Autonomia</string>
    <string name="total_de_quilometros">Total de Quilometros</string>
    <string name="pre_o_por_litro">Preço por litro</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="seu_gasto_total_ser_de">seu gasto total será de</string>
    <string name="r_0">R$ 0</string>
    <string name="calcular">calcular</string>
    <string name="notificationCampos">Preencha todos os campos</string>
</resources>